syntax = "proto3";

option csharp_namespace = "Microsoft.Maui.Automation";

message Element {
	string id = 1;
	optional string parentId = 2;
	optional string automationId = 3;

	Platform platform = 4;
	string type = 5;
	string fullType = 6;

	optional string text = 7;

	bool visible = 8;
	bool enabled = 9;
	bool focused = 10;

	int32 x = 11;
	int32 y = 12;
	int32 width = 13;
	int32 height = 14;

	optional Element parent = 15;
	repeated Element children = 16;
}

enum Platform {
	MAUI = 0;
	IOS = 100;
	MACCATALYST = 200;
	MACOS = 210;
	TVOS = 300;
	ANDROID = 400;
	WINAPPSDK = 500;
}
